MAINT: Fix java 23 issues