@@ -63,7 +63,7 @@ public class DBTableLookupServiceProvider implements ILookupServiceProvider {
      * This will be a hashtable of hashtables of ILookup objects. The first key
      * is the lookup name and the second key is the LookupQualifier.
      */
-    private static Hashtable<String, Hashtable<String, ILookup>> _lookups = new Hashtable<String, Hashtable<String, ILookup>>();
+    private static final Hashtable<String, Hashtable<String, ILookup>> _lookups = new Hashtable<>();
 
     /**
      * Default Constructor
@@ -82,18 +82,14 @@ public class DBTableLookupServiceProvider implements ILookupServiceProvider {
      * @param qualifier  LookupQualifier
      * @param optional   boolean
      * @return ILookup
-     * @throws LookupException
-     * @see ILookupServiceProvider#getLookup(String,
-     * LookupQualifier)
      */
-    public synchronized ILookup getLookup(String lookupName, LookupQualifier qualifier, boolean optional)
-            throws LookupException {
+    public synchronized ILookup getLookup(String lookupName, LookupQualifier qualifier, boolean optional) {
         ILookup lookup = getCachedLookup(lookupName, qualifier);
 
         if (null == lookup) {
             try {
-                Vector<Vector<Object>> rows = new Vector<Vector<Object>>();
-                Vector<String> colNames = new Vector<String>();
+                Vector<Vector<Object>> rows = new Vector<>();
+                Vector<String> colNames = new Vector<>();
                 Enumeration<?> en = ConfigProperties.getPropAsEnumeration(lookupName + "_DBTable");
 
                 while (en.hasMoreElements()) {
@@ -102,7 +98,7 @@ public class DBTableLookupServiceProvider implements ILookupServiceProvider {
 
                 // Have all of the columns - want to get a vector for each
                 // column value
-                Vector<Enumeration<?>> colRows = new Vector<Enumeration<?>>();
+                Vector<Enumeration<?>> colRows = new Vector<>();
                 int i;
                 int colNamesSize = colNames.size();
 
@@ -115,7 +111,7 @@ public class DBTableLookupServiceProvider implements ILookupServiceProvider {
                 boolean exit = false;
 
                 do {
-                    Vector<Object> row = new Vector<Object>();
+                    Vector<Object> row = new Vector<>();
                     boolean foundOne = false;
                     boolean addIt = true;
                     int colRowsSize = colRows.size();
@@ -138,7 +134,7 @@ public class DBTableLookupServiceProvider implements ILookupServiceProvider {
                         // Check to see if the returned lookup is to be
                         // constrained
                         if (foundOne && (qualifier != null)) {
-                            Object qualVal = qualifier.getValue("" + colNames.elementAt(i));
+                            Object qualVal = qualifier.getValue(colNames.elementAt(i));
 
                             if (null != qualVal) {
                                 if (!qualVal.equals(value)) {
@@ -185,9 +181,9 @@ public class DBTableLookupServiceProvider implements ILookupServiceProvider {
                      * Add the None selected row.
                      */
                     if (optional) {
-                        Vector<Object> newRowNone = new Vector<Object>();
+                        Vector<Object> newRowNone = new Vector<>();
                         Class<?> clazz = Class.forName(dao);
-                        Object daoObjectNone = clazz.newInstance();
+                        Object daoObjectNone = clazz.getDeclaredConstructor().newInstance();
                         newRowNone.add(type);
                         newRowNone.add(daoObjectNone);
                         newRowNone.add(Decode.NONE);
@@ -202,7 +198,7 @@ public class DBTableLookupServiceProvider implements ILookupServiceProvider {
                             Object[] o = new Object[0];
                             Object displayNameValue = method.invoke(daoObject, o);
                             if (null != displayNameValue) {
-                                Vector<Object> newRow = new Vector<Object>();
+                                Vector<Object> newRow = new Vector<>();
                                 newRow.add(type);
                                 newRow.add(daoObject);
                                 newRow.add(displayNameValue);
@@ -213,7 +209,7 @@ public class DBTableLookupServiceProvider implements ILookupServiceProvider {
                 }
 
                 // If rows where found then I managed to provide the lookup
-                if (rows.size() > 0) {
+                if (!rows.isEmpty()) {
                     lookup = new PropertiesLookup(colNames, rows);
                 }
             } catch (Throwable t) {
@@ -221,6 +217,7 @@ public class DBTableLookupServiceProvider implements ILookupServiceProvider {
                 // the lookup ignore the exception.
             }
             if (null != lookup) {
+                assert qualifier != null;
                 addLookupToCache(lookupName, qualifier, lookup);
             }
         }
@@ -262,12 +259,7 @@ public class DBTableLookupServiceProvider implements ILookupServiceProvider {
      * @param lookup     ILookup
      */
     private synchronized void addLookupToCache(String lookupName, LookupQualifier qualifier, ILookup lookup) {
-        Hashtable<String, ILookup> lookupsByQualifier = _lookups.get(lookupName);
-
-        if (null == lookupsByQualifier) {
-            lookupsByQualifier = new Hashtable<String, ILookup>();
-            _lookups.put(lookupName, lookupsByQualifier);
-        }
+        Hashtable<String, ILookup> lookupsByQualifier = _lookups.computeIfAbsent(lookupName, k -> new Hashtable<>());
 
         lookupsByQualifier.put(qualifier.toString(), lookup);
     }
@@ -277,7 +269,6 @@ public class DBTableLookupServiceProvider implements ILookupServiceProvider {
      *
      * @param className String
      * @return List<?>
-     * @throws ClassNotFoundException
      */
     private synchronized List<?> getCodes(String className) throws ClassNotFoundException {
 
@@ -292,7 +283,7 @@ public class DBTableLookupServiceProvider implements ILookupServiceProvider {
             TypedQuery<Object> typedQuery = entityManager.createQuery(select);
             List<Object> items = typedQuery.getResultList();
             entityManager.getTransaction().commit();
-            if (items.size() > 0) {
+            if (!items.isEmpty()) {
                 return items;
             }
 
@@ -302,6 +293,6 @@ public class DBTableLookupServiceProvider implements ILookupServiceProvider {
         } finally {
             EntityManagerHelper.close();
         }
-        return new ArrayList<Object>(0);
+        return new ArrayList<>(0);
     }
 }
